# pzsh

./: .gitignore  .pmat-gates.toml  CODEOWNERS  Cargo.toml  Makefile  README.md  pmat.toml
.github/workflows/: book.yml  ci.yml  nightly.yml  release.yml
.pmat/: baseline.json  context.db  project.toml
.pmat/metrics/: dependencies.json
benches/: startup.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/architecture/: aprender.md  bashrs.md  budget.md  design.md
book/src/cli/: bench.md  compile.md  lint.md  profile.md
book/src/concepts/: 10ms-constraint.md  forbidden-patterns.md  o1-everything.md  toyota-way.md
book/src/configuration/: aliases.md  colors.md  completion.md  environment.md  format.md  plugins.md  prompt.md  themes.md
book/src/contributing/: falsification.md  setup.md  testing.md
book/src/examples/: basic.md  developer.md  minimal.md  rust-api.md
book/src/getting-started/: installation.md  migration.md  quick-start.md
docs/specifications/: pzsh-spec.md
examples/: basic_config.rs  benchmark.rs  color.rs  completion.rs  lint_config.rs  parser.rs  plugin.rs  prompt.rs  shell_init.rs  theme.rs  zsh_features.rs
scripts/: pre-commit
src/: generated_contracts.rs  lib.rs  main.rs
src/cli/: mod.rs
src/color/: mod.rs
src/completion/: mod.rs
src/config/: mod.rs
src/executor/: mod.rs
src/parser/: mod.rs
src/plugin/: builtins.rs  mod.rs
src/prompt/: mod.rs
src/shell/: mod.rs
src/theme/: mod.rs
src/zsh/: mod.rs
tests/: integration.rs
