[package]
name = "pzsh"
version = "0.3.3"
edition = "2024"
authors = ["paiml"]
description = "Performance-first shell framework with sub-10ms startup"
license = "MIT"
repository = "https://github.com/paiml/pzsh"
keywords = ["shell", "zsh", "bash", "performance", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Performance
lru = "0.16"
ahash = { version = "0.8", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Time measurement
quanta = "0.12"

# System
dirs = "6"
hostname = "0.4"

# Optional ML completions
aprender = { version = "0.24", optional = true }
aprender-shell = { version = "0.3", optional = true }

# Optional SIMD acceleration
trueno = { version = "0.14", optional = true }

[features]
default = []
ml = ["aprender", "aprender-shell"]
simd = ["trueno"]
full = ["ml", "simd"]

[dev-dependencies]
# Testing
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
test-case = "3"

[[bench]]
name = "startup"
harness = false

[[example]]
name = "basic_config"
path = "examples/basic_config.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "lint_config"
path = "examples/lint_config.rs"

[[example]]
name = "parser"
path = "examples/parser.rs"

[[example]]
name = "prompt"
path = "examples/prompt.rs"

[[example]]
name = "color"
path = "examples/color.rs"

[[example]]
name = "completion"
path = "examples/completion.rs"

[[example]]
name = "plugin"
path = "examples/plugin.rs"

[[example]]
name = "shell_init"
path = "examples/shell_init.rs"

[[example]]
name = "theme"
path = "examples/theme.rs"

[[example]]
name = "zsh_features"
path = "examples/zsh_features.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
format_push_string = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow style preferences
uninlined_format_args = "allow"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
collapsible_if = "allow"
unnecessary_literal_bound = "allow"
redundant_clone = "allow"
single_char_pattern = "allow"
double_must_use = "allow"
unnecessary_wraps = "allow"
unnecessary_sort_by = "allow"
module_name_repetitions = "allow"
map_unwrap_or = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
ptr_arg = "allow"
manual_strip = "allow"
too_many_lines = "allow"
